--- a/iKota/Base.lproj/Main.storyboard
+++ b/iKota/Base.lproj/Main.storyboard
@@ -33,10 +33,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2pM-Qo-iAH">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2pM-Qo-iAH">
                                 <rect key="frame" x="0.0" y="110" width="600" height="376"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tune" rowHeight="54" id="PvP-SE-RS3">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PvP-SE-RS3" id="y5k-rN-JE5">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TDL-90-dcR">
+                                                    <rect key="frame" x="14" y="3" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="Ea9-vo-pMp"/>
+                                                        <constraint firstAttribute="width" constant="50" id="hTP-NT-Gt0"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9O-Uv-x0Z">
+                                                    <rect key="frame" x="72" y="10" width="520" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="tuning" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wJ-dC-t5h">
+                                                    <rect key="frame" x="72" y="27" width="520" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="TDL-90-dcR" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" id="6FF-Z1-nrY"/>
+                                                <constraint firstItem="TDL-90-dcR" firstAttribute="leading" secondItem="y5k-rN-JE5" secondAttribute="leadingMargin" id="FfD-gM-hJh"/>
+                                                <constraint firstAttribute="centerY" secondItem="TDL-90-dcR" secondAttribute="centerY" id="M0U-er-yBL"/>
+                                                <constraint firstItem="3wJ-dC-t5h" firstAttribute="leading" secondItem="TDL-90-dcR" secondAttribute="trailing" constant="8" id="cx7-pf-NmB"/>
+                                                <constraint firstItem="TDL-90-dcR" firstAttribute="leading" secondItem="y5k-rN-JE5" secondAttribute="leadingMargin" constant="6" id="fBH-gf-jOs"/>
+                                                <constraint firstItem="J9O-Uv-x0Z" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" id="iyM-HW-Nht"/>
+                                                <constraint firstItem="3wJ-dC-t5h" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" id="r7r-Zw-N6l"/>
+                                                <constraint firstItem="3wJ-dC-t5h" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" constant="22" id="sKK-Pg-ZwO"/>
+                                                <constraint firstItem="J9O-Uv-x0Z" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" id="vk6-MN-9ko"/>
+                                                <constraint firstItem="J9O-Uv-x0Z" firstAttribute="leading" secondItem="TDL-90-dcR" secondAttribute="trailing" constant="8" id="wwa-KT-shR"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="6FF-Z1-nrY"/>
+                                                    <exclude reference="FfD-gM-hJh"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="evc-zH-W4O">
                                 <rect key="frame" x="290" y="117" width="20" height="20"/>
@@ -66,8 +113,8 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xGw-fi-nOI">
-                                <rect key="frame" x="0.0" y="492" width="600" height="50"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGw-fi-nOI">
+                                <rect key="frame" x="0.0" y="492" width="600" height="44"/>
                                 <items>
                                     <barButtonItem title="Tuning" id="gp0-bd-Z8Z">
                                         <connections>
@@ -123,7 +170,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="eYK-S8-2SZ" secondAttribute="trailing" constant="5" id="fHm-Vd-0bW"/>
                             <constraint firstItem="eYK-S8-2SZ" firstAttribute="top" secondItem="HHW-wY-ph3" secondAttribute="bottom" constant="2" id="gX2-dw-qLO"/>
                             <constraint firstItem="rck-7u-40O" firstAttribute="leading" secondItem="EHP-rd-4js" secondAttribute="leadingMargin" id="iZr-UB-Jh4"/>
-                            <constraint firstItem="2pM-Qo-iAH" firstAttribute="leading" secondItem="EHP-rd-4js" secondAttribute="leadingMargin" constant="-16" id="jwp-E6-TgV"/>
+                            <constraint firstItem="2pM-Qo-iAH" firstAttribute="leading" secondItem="EHP-rd-4js" secondAttribute="leadingMargin" constant="-24" id="jwp-E6-TgV"/>
                             <constraint firstItem="HHW-wY-ph3" firstAttribute="top" secondItem="r9G-a3-ChU" secondAttribute="bottom" constant="20" id="l8D-g0-HVh"/>
                             <constraint firstItem="Kwg-Sr-tWb" firstAttribute="leading" secondItem="rck-7u-40O" secondAttribute="trailing" constant="5" id="r9x-TC-zys"/>
                             <constraint firstItem="O4v-0f-oPT" firstAttribute="top" secondItem="xGw-fi-nOI" secondAttribute="bottom" id="t63-cq-8oz"/>
@@ -151,7 +198,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mmE-J8-lV2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="685" y="451"/>
+            <point key="canvasLocation" x="685" y="444"/>
         </scene>
     </scenes>
 </document>
