--- a/iKota/Base.lproj/Main.storyboard
+++ b/iKota/Base.lproj/Main.storyboard
@@ -89,28 +89,22 @@
                                 <rect key="frame" x="290" y="117" width="20" height="20"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rck-7u-40O">
-                                <rect key="frame" x="16" y="5" width="100" height="100"/>
+                                <rect key="frame" x="6" y="5" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="HWI-TK-Q6e"/>
                                     <constraint firstAttribute="height" constant="100" id="PiH-Vh-2gU"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HHW-wY-ph3">
-                                <rect key="frame" x="121" y="20" width="458" height="24"/>
+                                <rect key="frame" x="111" y="10" width="473" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYK-S8-2SZ">
-                                <rect key="frame" x="121" y="46" width="458" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYK-S8-2SZ">
+                                <rect key="frame" x="111" y="36" width="415" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tuning" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kwg-Sr-tWb">
-                                <rect key="frame" x="121" y="72" width="458" height="23"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGw-fi-nOI">
@@ -147,6 +141,20 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WHE-qK-wSz">
+                                <rect key="frame" x="534" y="45" width="60" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Oof-OK-MU2"/>
+                                    <constraint firstAttribute="width" constant="60" id="ccH-v9-ykp"/>
+                                </constraints>
+                            </webView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tuning" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kwg-Sr-tWb">
+                                <rect key="frame" x="111" y="79" width="468" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -157,7 +165,12 @@
                             <constraint firstAttribute="centerX" secondItem="evc-zH-W4O" secondAttribute="centerX" id="3QV-uA-Qbs"/>
                             <constraint firstItem="Kwg-Sr-tWb" firstAttribute="top" secondItem="HHW-wY-ph3" secondAttribute="bottom" constant="5" id="3rP-41-MrZ"/>
                             <constraint firstItem="eYK-S8-2SZ" firstAttribute="top" secondItem="Kwg-Sr-tWb" secondAttribute="bottom" constant="5" id="ABo-Jo-B6V"/>
+                            <constraint firstItem="WHE-qK-wSz" firstAttribute="leading" secondItem="HHW-wY-ph3" secondAttribute="trailing" constant="8" id="Drv-x6-zbv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WHE-qK-wSz" secondAttribute="trailing" constant="-10" id="EwB-m9-xFd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Kwg-Sr-tWb" secondAttribute="trailing" constant="5" id="Iue-io-Qu0"/>
+                            <constraint firstItem="HHW-wY-ph3" firstAttribute="trailing" secondItem="EHP-rd-4js" secondAttribute="trailingMargin" id="K4T-xz-y5g"/>
+                            <constraint firstItem="2pM-Qo-iAH" firstAttribute="top" secondItem="WHE-qK-wSz" secondAttribute="bottom" constant="5" id="Kun-Lo-66T"/>
+                            <constraint firstItem="WHE-qK-wSz" firstAttribute="leading" secondItem="eYK-S8-2SZ" secondAttribute="trailing" constant="8" id="NIT-ou-dgW"/>
                             <constraint firstItem="Kwg-Sr-tWb" firstAttribute="top" secondItem="eYK-S8-2SZ" secondAttribute="bottom" constant="10" id="QqG-BM-L90"/>
                             <constraint firstItem="rck-7u-40O" firstAttribute="top" secondItem="r9G-a3-ChU" secondAttribute="bottom" constant="5" id="RXM-2z-Qoa"/>
                             <constraint firstItem="HHW-wY-ph3" firstAttribute="leading" secondItem="rck-7u-40O" secondAttribute="trailing" constant="5" id="SUV-PS-ZPF"/>
@@ -169,9 +182,10 @@
                             <constraint firstItem="eYK-S8-2SZ" firstAttribute="leading" secondItem="rck-7u-40O" secondAttribute="trailing" constant="5" id="cvN-gu-yna"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eYK-S8-2SZ" secondAttribute="trailing" constant="5" id="fHm-Vd-0bW"/>
                             <constraint firstItem="eYK-S8-2SZ" firstAttribute="top" secondItem="HHW-wY-ph3" secondAttribute="bottom" constant="2" id="gX2-dw-qLO"/>
-                            <constraint firstItem="rck-7u-40O" firstAttribute="leading" secondItem="EHP-rd-4js" secondAttribute="leadingMargin" id="iZr-UB-Jh4"/>
+                            <constraint firstItem="rck-7u-40O" firstAttribute="leading" secondItem="EHP-rd-4js" secondAttribute="leadingMargin" constant="-10" id="iZr-UB-Jh4"/>
+                            <constraint firstItem="2pM-Qo-iAH" firstAttribute="top" secondItem="Kwg-Sr-tWb" secondAttribute="bottom" constant="8" id="idr-1T-Feu"/>
                             <constraint firstItem="2pM-Qo-iAH" firstAttribute="leading" secondItem="EHP-rd-4js" secondAttribute="leadingMargin" constant="-24" id="jwp-E6-TgV"/>
-                            <constraint firstItem="HHW-wY-ph3" firstAttribute="top" secondItem="r9G-a3-ChU" secondAttribute="bottom" constant="20" id="l8D-g0-HVh"/>
+                            <constraint firstItem="HHW-wY-ph3" firstAttribute="top" secondItem="r9G-a3-ChU" secondAttribute="bottom" constant="10" id="l8D-g0-HVh"/>
                             <constraint firstItem="Kwg-Sr-tWb" firstAttribute="leading" secondItem="rck-7u-40O" secondAttribute="trailing" constant="5" id="r9x-TC-zys"/>
                             <constraint firstItem="O4v-0f-oPT" firstAttribute="top" secondItem="xGw-fi-nOI" secondAttribute="bottom" id="t63-cq-8oz"/>
                         </constraints>
@@ -179,8 +193,12 @@
                             <mask key="constraints">
                                 <exclude reference="Y5q-KD-xrk"/>
                                 <exclude reference="YbS-8g-0la"/>
+                                <exclude reference="1gG-0L-Hpk"/>
                                 <exclude reference="ABo-Jo-B6V"/>
+                                <exclude reference="fHm-Vd-0bW"/>
                                 <exclude reference="3rP-41-MrZ"/>
+                                <exclude reference="QqG-BM-L90"/>
+                                <exclude reference="Drv-x6-zbv"/>
                             </mask>
                         </variation>
                     </view>
@@ -198,6 +216,7 @@
                         <outlet property="playingImageView" destination="rck-7u-40O" id="141-17-D1Z"/>
                         <outlet property="playingTitleLabel" destination="HHW-wY-ph3" id="Cdl-WS-9FF"/>
                         <outlet property="playingTuningLabel" destination="Kwg-Sr-tWb" id="qqD-UW-xUW"/>
+                        <outlet property="playingWebView" destination="WHE-qK-wSz" id="Yrc-7t-aWq"/>
                         <outlet property="tunesIndicator" destination="evc-zH-W4O" id="djF-Jo-BjQ"/>
                         <outlet property="tunesTable" destination="2pM-Qo-iAH" id="tzV-Qb-l7C"/>
                         <segue destination="yBB-pf-U2p" kind="show" identifier="youtube" id="PC7-Mg-6Ff"/>
@@ -239,8 +258,8 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <webView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eY8-6V-WEF">
-                                            <rect key="frame" x="8" y="9" width="110" height="110"/>
+                                        <webView tag="1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eY8-6V-WEF">
+                                            <rect key="frame" x="8" y="10" width="110" height="110"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="110" id="Cbo-pF-P92"/>
@@ -287,7 +306,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tAc-AW-yef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1395" y="444"/>
+            <point key="canvasLocation" x="1395" y="441"/>
         </scene>
     </scenes>
 </document>
